[project]
name = "ironic-interfaces"
version = "0.0.0"
description = "Collection of custom Ironic interfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ironic>=26.0.0",
]

[dependency-groups]
dev = [
    "fixtures>=4.2.6",
    "junitxml>=0.7",
    "oslotest>=5.0.1",
    "stestr>=4.2.0",
]

[[tool.mypy.overrides]]
module = "ironic.*"
ignore_missing_imports = true
