[project]
name = "ironic-interfaces"
version = "0.0.0"
description = "Collection of custom Ironic interfaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ironic>=26.0.0",
]

[project.entry-points."ironic.hardware.interfaces.bios"]
redfish-bluefield-ethernet = "ironic_interfaces.lenovo.bios:BlueFieldEthernetRedfishBIOS"

[project.entry-points."ironic.hardware.types"]
lenovo = "ironic_interfaces.lenovo.hardware:LenovoHardware"

[dependency-groups]
dev = [
    "fixtures>=4.2.6",
    "junitxml>=0.7",
    "oslotest>=5.0.1",
    "stestr>=4.2.0",
]

[[tool.mypy.overrides]]
module = "ironic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oslo_service.*"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 120
