[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironic-interfaces"
version = "0.0.0"
description = "Collection of custom Ironic interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ironic>=26.0.0",
]

[dependency-groups]
dev = [
    "fixtures>=4.2.6",
    "junitxml>=0.7",
    "mypy>=1.18.2",
    "oslotest>=5.0.1",
    "pylint>=4.0.2",
    "stestr>=4.2.0",
]

[project.entry-points."ironic.hardware.interfaces.bios"]
redfish-bluefield-ethernet = "ironic_interfaces.lenovo.bios:BlueFieldEthernetRedfishBIOS"

[project.entry-points."ironic.hardware.types"]
lenovo = "ironic_interfaces.lenovo.hardware:LenovoHardware"

[[tool.mypy.overrides]]
module = "ironic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "oslo_service.*"
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 120

[tool.uv]
package = true
